--- a/tmux.conf
+++ b/tmux.conf
@@ -3,8 +3,11 @@ set -g default-terminal 'screen-256color'
 unbind C-b
 set -g prefix C-a
 
+
 set -g status-bg '#666666'
 set -g status-fg '#aaaaaa'
+set -g status-right " | #[fg=colour45]%d %b %R "
+
 
 bind h select-pane -L
 bind j select-pane -D
