--- a/tmux.conf
+++ b/tmux.conf
@@ -1,17 +1,48 @@
 set -g default-terminal 'screen-256color'
 
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
 unbind C-b
 set -g prefix C-a
 
+setw -g mode-mouse off
+set -g mouse-select-pane off
+set -g mouse-resize-pane off
+set -g mouse-select-window off
 
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
-set -g status-right " | #[fg=colour45]%d %b %R "
-
+set-option -g allow-rename off
 
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind C-a select-pane -t :.+
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+bind C-a send-prefix
+
+set -g base-index 1
+setw -g pane-base-index 1
+
+set -g status-fg white
+set -g status-bg black
+
+setw -g window-status-fg cyan
+setw -g window-status-bg default
+setw -g window-status-attr dim
+
+setw -g window-status-current-fg white
+setw -g window-status-current-bg red
+setw -g window-status-current-attr bright
+
+set -g pane-border-fg white
+set -g pane-border-bg default
+set -g pane-active-border-fg yellow
+set -g pane-active-border-bg colour235
+
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
