--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 unbind C-b
 set -g prefix C-a
 
+setw -g mode-keys vi
+
 setw -g mode-mouse off
 set -g mouse-select-pane off
 set -g mouse-resize-pane off
@@ -24,19 +26,25 @@ bind -r L resize-pane -R 5
 
 bind C-a send-prefix
 
+# Intexes start at 1
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Status bar
 set -g status-fg white
-set -g status-bg black
+set -g status-bg default
 
-setw -g window-status-fg cyan
+setw -g window-status-fg yellow
 setw -g window-status-bg default
 setw -g window-status-attr dim
 
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+setw -g window-status-current-fg black
+setw -g window-status-current-bg White
+setw -g window-status-current-attr dim
+
+setw -g window-status-activity-fg black
+setw -g window-status-activity-bg yellow
+setw -g window-status-activity-attr dim
 
 set -g pane-border-fg white
 set -g pane-border-bg default
@@ -46,3 +54,13 @@ set -g pane-active-border-bg colour235
 set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
+
+set -g status-utf8 on
+set -g status-justify centre
+
+set -g status-left "#[fg=white attr=bright]#S #I #P"
+
+set -g status-right "#[fg=red]#(~/dotfiles/battery Discharging)#[fg=green]#(~/dotfiles/battery Charging) #[fg=white]%d %b %R"
+
+setw -g monitor-activity on
+set -g visual-activity off
