Tmux: Renumber windows and current window in status bar appearence

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,9 @@ bind C-a send-prefix
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Renumber windows when some is closed
+set-option -g renumber-windows on
+
 # Status bar
 set -g status-fg white
 set -g status-bg default
@@ -57,6 +60,8 @@ set -g message-attr bright
 
 set -g status-utf8 on
 set -g status-justify centre
+
+set-window-option -g window-status-current-format ' #W '
 
 set -g status-left "#[fg=white attr=bright]#S #I #P"
 
