tmux visual bell, vim csapprox + highlight col

--- a/tmux.conf
+++ b/tmux.conf
@@ -75,5 +75,6 @@ set -g status-left "#[fg=white attr=bright]#S #I #P"
 
 set -g status-right "#[fg=red]#(~/dotfiles/battery Discharging)#[fg=green]#(~/dotfiles/battery Charging) #[fg=white]%d %b %R"
 
-setw -g monitor-activity on
+setw -g monitor-activity off
 set -g visual-activity off
+set -g visual-bell on
