--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,8 @@
 set -g default-terminal 'screen-256color'
 
+# pbcopy, pbpaste
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 unbind C-b
