Change bell behaviour in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -80,4 +80,7 @@ set -g status-right "#[fg=red]#(~/dotfiles/battery Discharging)#[fg=green]#(~/do
 
 setw -g monitor-activity off
 set -g visual-activity off
-set -g visual-bell on
+set -g visual-bell off
+set -g bell-action any
+set -g bell-on-alert on
+
