Add bin to dotfiles

--- a/tmux.conf
+++ b/tmux.conf
@@ -76,7 +76,7 @@ set-window-option -g window-status-current-format ' #W '
 
 set -g status-left "#[fg=white attr=bright]#S #I #P"
 
-set -g status-right "#[fg=red]#(~/dotfiles/battery Discharging)#[fg=green]#(~/dotfiles/battery Charging) #[fg=white]%d %b %R"
+set -g status-right "#[fg=red]#(battery Discharging)#[fg=green]#(battery Charging) #[fg=white]%d %b %R"
 
 setw -g monitor-activity off
 set -g visual-activity off
