--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 set -g default-terminal 'screen-256color'
 
 # pbcopy, pbpaste
+# brew install reattach-to-user-namespace
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
