Add tmuxline theme snapshot

--- a/tmux.conf
+++ b/tmux.conf
@@ -73,11 +73,13 @@ set -g message-attr bright
 set -g status-utf8 on
 set -g status-justify centre
 
-set-window-option -g window-status-current-format ' #W '
+#set-window-option -g window-status-current-format ' #W '
 
-set -g status-left "#[fg=white attr=bright]#S #I #P"
+#set -g status-left "#[fg=white attr=bright]#S #I #P"
 
-set -g status-right "#[fg=red]#(battery Discharging)#[fg=green]#(battery Charging) #[fg=white]%d %b %R"
+#set -g status-right "#[fg=red]#(battery Discharging)#[fg=green]#(battery Charging) #[fg=white]%d %b %R"
+
+if-shell "test -f ~/dotfiles/tmuxline.theme" "source ~/dotfiles/tmuxline.theme"
 
 setw -g monitor-activity off
 set -g visual-activity off
