--- a/tmux.conf
+++ b/tmux.conf
@@ -11,10 +11,7 @@ set -g prefix C-a
 
 setw -g mode-keys vi
 
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+set -g mouse on
 
 set-option -g allow-rename off
 
@@ -70,7 +67,6 @@ set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
 
-set -g status-utf8 on
 set -g status-justify centre
 
 #set-window-option -g window-status-current-format ' #W '
