--- a/tmux.conf
+++ b/tmux.conf
@@ -80,6 +80,6 @@ if-shell "test -f ~/dotfiles/tmuxline.theme" "source ~/dotfiles/tmuxline.theme"
 setw -g monitor-activity off
 set -g visual-activity off
 set -g visual-bell off
+set -g activity-action any
 set -g bell-action any
-set -g bell-on-alert on
 
