--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,7 +75,7 @@ set -g status-justify centre
 
 #set -g status-right "#[fg=red]#(battery Discharging)#[fg=green]#(battery Charging) #[fg=white]%d %b %R"
 
-if-shell "test -f ~/dotfiles/tmuxline.theme" "source ~/dotfiles/tmuxline.theme"
+if-shell "test -f ~/.tmuxline.theme" "source ~/.tmuxline.theme"
 
 setw -g monitor-activity off
 set -g visual-activity off
