--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 set -g default-terminal 'screen-256color'
 
-# pbcopy, pbpaste
+# use reattach-to-user-namespace as the default command on OSX
 # brew install reattach-to-user-namespace
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+if-shell "type 'reattach-to-user-namespace' >/dev/null" "set -g default-command 'reattach-to-user-namespace -l $SHELL'"
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
@@ -26,7 +26,7 @@ bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n 'C-\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
@@ -43,29 +43,15 @@ setw -g pane-base-index 1
 set-option -g renumber-windows on
 
 # Status bar
-set -g status-fg white
-set -g status-bg default
+set -g status-style fg=white
+set -g status-style bg=default
 
-setw -g window-status-fg yellow
-setw -g window-status-bg default
-setw -g window-status-attr dim
-
-setw -g window-status-current-fg black
-setw -g window-status-current-bg White
-setw -g window-status-current-attr dim
-
-setw -g window-status-activity-fg black
-setw -g window-status-activity-bg yellow
-setw -g window-status-activity-attr dim
-
-set -g pane-border-fg white
-set -g pane-border-bg default
-set -g pane-active-border-fg yellow
-set -g pane-active-border-bg colour234
-
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+setw -g window-status-style "dim,bg=default,fg=yellow"
+setw -g window-status-current-style "dim,bg=white,fg=black"
+setw -g window-status-activity-style "dim,bg=yellow,fg=black"
+set -g pane-border-style "bg=default,fg=white"
+set -g pane-active-border-style "bg=colour234,fg=yellow"
+set -g message-style "bright,bg=black,fg=white"
 
 set -g status-justify centre
 
