Rice and tweaks

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal 'screen-256color'
+set -g default-terminal "xterm-256color"
 
 # use reattach-to-user-namespace as the default command on OSX
 # brew install reattach-to-user-namespace
