Status lines updates

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # use reattach-to-user-namespace as the default command on OSX
 # brew install reattach-to-user-namespace
@@ -42,26 +42,63 @@ setw -g pane-base-index 1
 # Renumber windows when some is closed
 set-option -g renumber-windows on
 
+############################
 # Status bar
-set -g status-style fg=white
+############################
+
+ACCENT='colour7'
+LIGHT='colour255'
+BLACK='colour16'
+DARK='#3b4251'
+DIM='colour243'
+
+YAY='colour2'
+NAY='colour13'
+
 set -g status-style bg=default
 
-setw -g window-status-style "dim,bg=default,fg=yellow"
-setw -g window-status-current-style "dim,bg=white,fg=black"
-setw -g window-status-activity-style "dim,bg=yellow,fg=black"
-set -g pane-border-style "bg=default,fg=white"
-set -g pane-active-border-style "bg=colour234,fg=yellow"
-set -g message-style "bright,bg=black,fg=white"
+# Status bar left
+##################
+
+set -g status-left-length 400
+# Current session
+set -g  status-left "#[bg=$ACCENT,fg=$BLACK] #S #[bg=$DARK,fg=$ACCENT]\ue0b0"
+# Current window
+set -ga status-left " #I:#W "
+# Current pane
+set -ga status-left "#[fg=$DIM]\ue0b1 #[fg=$ACCENT] #P #[fg=$DARK,bg=default]\ue0b0"
+
+
+# Status bar right
+##################
+
+set -g status-right-length 400
+# Currently playing in spotify
+set -g  status-right "#[fg=colour10]#(tmux-spotify-info) "
+# Battery percent
+# TODO: Change icon instead of color for charging/discharing.
+set -ga status-right "#[fg=$NAY]#(battery Charging)#[fg=$NAY]#(battery Discharging)"
+# Date and time
+set -ga status-right " #[fg=$ACCENT]\ue0b2"
+set -ga status-right "#[bg=$ACCENT,fg=$BLACK] %a %d %b %R "
+
+
+# Status bar windows
+####################
 
 set -g status-justify centre
+set -g window-status-current-format ' #I #W '
+set -g window-status-format ' #I #W '
 
-#set-window-option -g window-status-current-format ' #W '
+setw -g window-status-style "bg=default,fg=$ACCENT"
+setw -g window-status-current-style "bold,bg=$DARK,fg=$ACCENT"
+setw -g window-status-activity-style "bold,bg=red,fg=$DARK"
 
-#set -g status-left "#[fg=white attr=bright]#S #I #P"
+set -g pane-active-border-style "bg=default,fg=colour12"
+set -g pane-border-style "bg=default,fg=$DIM"
 
-#set -g status-right "#[fg=red]#(battery Discharging)#[fg=green]#(battery Charging) #[fg=white]%d %b %R"
+set -g message-style "bright,bg=colour12,fg=$ACCENT"
 
-if-shell "test -f ~/.tmuxline.theme" "source ~/.tmuxline.theme"
 
 setw -g monitor-activity off
 set -g visual-activity off
