--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,6 +45,7 @@ set-option -g renumber-windows on
 ############################
 # Status bar
 ############################
+set -g status-interval 2
 
 ACCENT='colour7'
 LIGHT='colour255'
@@ -68,7 +69,6 @@ set -ga status-left " #I:#W "
 # Current pane
 set -ga status-left "#[fg=$DIM]\ue0b1 #[fg=$ACCENT] #P #[fg=$DARK,bg=default]\ue0b0"
 
-
 # Status bar right
 ##################
 
@@ -79,9 +79,9 @@ set -g  status-right "#[fg=colour10]#(tmux-spotify-info) "
 # TODO: Change icon instead of color for charging/discharing.
 set -ga status-right "#[fg=$NAY]#(battery Charging)#[fg=$NAY]#(battery Discharging)"
 # Date and time
+set -ga status-right "#[fg=$DARK]\ue0b2#[bg=$DARK,fg=$ACCENT] #(keyboard)"
 set -ga status-right " #[fg=$ACCENT]\ue0b2"
 set -ga status-right "#[bg=$ACCENT,fg=$BLACK] %a %d %b %R "
-
 
 # Status bar windows
 ####################
