tmux statusline + minor vimrc updates

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,19 +67,19 @@ set -g  status-left "#[bg=$ACCENT,fg=$BLACK] #S #[bg=$DARK,fg=$ACCENT]\ue0b0"
 # Current window
 set -ga status-left " #I:#W "
 # Current pane
-set -ga status-left "#[fg=$DIM]\ue0b1 #[fg=$ACCENT] #P #[fg=$DARK,bg=default]\ue0b0"
+set -ga status-left "#[fg=$DIM]\ue0b1 #[fg=$ACCENT]#P #[fg=$DARK,bg=default]\ue0b0"
 
 # Status bar right
 ##################
 
 set -g status-right-length 400
 # Currently playing in spotify
-set -g  status-right "#[fg=colour10]#(tmux-spotify-info) "
+set -g  status-right "#[fg=colour10]#(tmux-spotify-info)"
 # Battery percent
 # TODO: Change icon instead of color for charging/discharing.
-set -ga status-right "#[fg=$NAY]#(battery Charging)#[fg=$NAY]#(battery Discharging)"
+set -ga status-right " #[fg=$YAY]#(battery Charging)#[fg=$NAY]#(battery Discharging)"
 # Date and time
-set -ga status-right "#[fg=$DARK]\ue0b2#[bg=$DARK,fg=$ACCENT] #(keyboard)"
+set -ga status-right " #[fg=$DARK]\ue0b2#[bg=$DARK,fg=$ACCENT] #(keyboard)"
 set -ga status-right " #[fg=$ACCENT]\ue0b2"
 set -ga status-right "#[bg=$ACCENT,fg=$BLACK] %a %d %b %R "
 
