--- a/.config/git/config
+++ b/.config/git/config
@@ -3,7 +3,7 @@
 	name = Johan Linder
 [core]
 	editor = nvim
-	excludesfile = ~/.gitignore_global
+	excludesfile = ~/.config/git/gitignore_global
 [merge]
 	tool = opendiff
 
