--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # use reattach-to-user-namespace as the default command on OSX
 # brew install reattach-to-user-namespace
@@ -13,6 +14,8 @@ setw -g mode-keys vi
 
 set -g mouse on
 
+set -sg escape-time 10
+
 set-option -g allow-rename off
 
 bind h select-pane -L
@@ -26,7 +29,7 @@ bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n 'C-\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# bind -n 'C-\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
