--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,7 +5,7 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 # brew install reattach-to-user-namespace
 if-shell "type 'reattach-to-user-namespace' >/dev/null" "set -g default-command 'reattach-to-user-namespace -l $SHELL'"
 
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 
 unbind C-b
 set -g prefix C-a
