Fix bad contrast of tmux message bar

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -100,7 +100,7 @@ setw -g window-status-activity-style "bold,bg=red,fg=$DARK"
 set -g pane-active-border-style "bg=default,fg=colour12"
 set -g pane-border-style "bg=default,fg=$DIM"
 
-set -g message-style "bright,bg=colour12,fg=$ACCENT"
+set -g message-style "bright,bg=$DARK,fg=$ACCENT"
 
 
 setw -g monitor-activity off
