Add messy prettier null-ls config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,5 +7,7 @@ hide_window_decorations yes
 
 # BEGIN_KITTY_THEME
 # Ayu Mirage
-include current-theme.conf
+# include current-theme.conf
 # END_KITTY_THEME
+include ~/.local/share/nvim/plugged/nightfox.nvim/extra/nightfox/nightfox_kitty.conf
+#include ~/.local/share/nvim/plugged/nightfox.nvim/extra/dayfox/nightfox_kitty.conf
