--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -50,10 +50,11 @@ set-option -g renumber-windows on
 ############################
 set -g status-interval 2
 
-ACCENT='colour7'
+ACCENT='colour11'
 LIGHT='colour255'
 BLACK='colour0'
-DARK='#3b4251'
+# DARK='colour230'
+DARK='colour59'
 DIM='colour243'
 
 YAY='colour2'
