Simplify tmux status bar

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -45,64 +45,9 @@ setw -g pane-base-index 1
 # Renumber windows when some is closed
 set-option -g renumber-windows on
 
-############################
-# Status bar
-############################
 set -g status-interval 2
 
-ACCENT='colour11'
-LIGHT='colour255'
-BLACK='colour0'
-# DARK='colour230'
-DARK='colour59'
-DIM='colour243'
-
-YAY='colour2'
-NAY='colour13'
-
-set -g status-style bg=default
-
-# Status bar left
-##################
-
-set -g status-left-length 400
-# Current session
-set -g  status-left "#[bg=$ACCENT,fg=$BLACK] #S #[bg=$DARK,fg=$ACCENT]\ue0b0"
-# Current window
-set -ga status-left " #I:#W "
-# Current pane
-set -ga status-left "#[fg=$DIM]\ue0b1 #[fg=$ACCENT]#P #[fg=$DARK,bg=default]\ue0b0"
-
-# Status bar right
-##################
-
-set -g status-right-length 400
-# Currently playing in spotify
-set -g  status-right "#[fg=colour10]#(tmux-spotify-info)"
-# Battery percent
-# TODO: Change icon instead of color for charging/discharing.
-set -ga status-right " #[fg=$YAY]#(battery Charging)#[fg=$NAY]#(battery Discharging)"
-# Date and time
-set -ga status-right " #[fg=$DARK]\ue0b2#[bg=$DARK,fg=$ACCENT] #(keyboard)"
-set -ga status-right " #[fg=$ACCENT]\ue0b2"
-set -ga status-right "#[bg=$ACCENT,fg=$BLACK] %a %d %b %R "
-
-# Status bar windows
-####################
-
-set -g status-justify centre
-set -g window-status-current-format ' #I #W '
-set -g window-status-format ' #I #W '
-
-setw -g window-status-style "bg=default,fg=$ACCENT"
-setw -g window-status-current-style "bold,bg=$DARK,fg=$ACCENT"
-setw -g window-status-activity-style "bold,bg=red,fg=$DARK"
-
-set -g pane-active-border-style "bg=default,fg=colour12"
-set -g pane-border-style "bg=default,fg=$DIM"
-
-set -g message-style "bright,bg=$DARK,fg=$ACCENT"
-
+source-file "~/.config/tmux/statusbar.conf"
 
 setw -g monitor-activity off
 set -g visual-activity off
